0.7.0 -> Present
 windows:
  - Fixed a bug that was causing the emulator to sometimes start in using PAL
    timing.
 general:
  - Fixed a potential issue when enabling/disabling auto frameskipping.
0.6.0 -> 0.7.0
 cart:
  - Added Action Replay flash emulation.
 cd block:
  - Fixed Read Directory/Change Directory commands. This fixes Duke Nukem 3D
    and a few others that have Netlink support.
  - Audio data is no longer stored when read by the cd block. This fixes
    Guardian Heroes.
  - other bug fixes.
 scsp:
  - Added function that allows developers to get easy to read information on
    the requested scsp sound slot.
  - Fixed a bug where the phase wasn't getting updated if DISDL was set to 0.
    This fixes Falcom Classics, Nadesico, and many other games using ADX.
  - Fixed a bug that was causing OCT with a setting of 0x8 to play at the
    wrong octave.
  - Fixed a bug that was causing King of Fighters 95(and possibly others) to
    go into an endless loop.
 scu:
  - Improved SCU interrupt handling.
 sh2:
  - Fixed a bug in exts.b opcode.
  - Corrected some bugs in sh2idle
  - SCI emulation improvements
 smpc:
  - Added proper DOTSEL reporting.
  - Region settings are now properly preserved.
  - Changed region autodetection so it defaults to the japanese region if
    it can't autodetect.
 68k:
  - Fixed a few bugs.
 vdp2:
  - Debug info bug fixes
  - Implemented one mode of external HV latching. This fixes King of Fighters
    95.
  - External latch and sync flags are now cleared on TVSTAT reading.
  - Added speed throttle(basically skips 6 frame draws).
  - Added long writes for VCSTA, LSTA0, and LSTA1 registers.
 software video core:
  - Rewrote it so it's no longer dependent on SDL.
  - Added NBG2/NBG3 support.
  - Added tile mode rendering.
  - Added frame buffer emulation.
  - Added normal sprite drawing.
  - Changed Normal Sprite drawing so that Scaled Sprite and Distorted Sprite
    functions can use it too.